sherpa-onnx/c-api/cxx-api.h

// ============================================================================
// Streaming ASR
// ============================================================================
/** @brief Streaming transducer model files. */
struct OnlineTransducerModelConfig {
  /** Encoder ONNX model. */
  std::string encoder;
  /** Decoder ONNX model. */
  std::string decoder;
  /** Joiner ONNX model. */
  std::string joiner;
};
/** @brief Streaming Paraformer model files. */
struct OnlineParaformerModelConfig {
  /** Encoder ONNX model. */
  std::string encoder;
  /** Decoder ONNX model. */
  std::string decoder;
};
/** @brief Streaming Zipformer2 CTC model file. */
struct OnlineZipformer2CtcModelConfig {
  /** Model ONNX file. */
  std::string model;
};
/** @brief Streaming NeMo CTC model file. */
struct OnlineNemoCtcModelConfig {
  /** Model ONNX file. */
  std::string model;
};
/** @brief Streaming T-One CTC model file. */
struct OnlineToneCtcModelConfig {
  /** Model ONNX file. */
  std::string model;
};
/**
 * @brief Acoustic model configuration for streaming ASR.
 *
 * Configure exactly one model family. If multiple model families are set, one
 * of them will be chosen and the choice is implementation-defined.
 *
 * Example using
 * `sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20`:
 *
 * @code
 * OnlineModelConfig model;
 * model.transducer.encoder =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/"
 *     "encoder-epoch-99-avg-1.int8.onnx";
 * model.transducer.decoder =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/"
 *     "decoder-epoch-99-avg-1.onnx";
 * model.transducer.joiner =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/"
 *     "joiner-epoch-99-avg-1.int8.onnx";
 * model.tokens =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/tokens.txt";
 * model.num_threads = 1;
 * @endcode
 */
struct OnlineModelConfig {
  /** Streaming transducer configuration. */
  OnlineTransducerModelConfig transducer;
  /** Streaming Paraformer configuration. */
  OnlineParaformerModelConfig paraformer;
  /** Streaming Zipformer2 CTC configuration. */
  OnlineZipformer2CtcModelConfig zipformer2_ctc;
  /** Streaming NeMo CTC configuration. */
  OnlineNemoCtcModelConfig nemo_ctc;
  /** Streaming T-One CTC configuration. */
  OnlineToneCtcModelConfig t_one_ctc;
  /** Token file path. */
  std::string tokens;
  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
  /** Enable verbose debug logging. */
  bool debug = false;
  /** Optional explicit model type hint. */
  std::string model_type;
  /** Modeling unit such as `"cjkchar"` or `"bpe"`. */
  std::string modeling_unit = "cjkchar";
  /** Optional BPE vocabulary. */
  std::string bpe_vocab;
  /** Optional in-memory token content. If non-empty, it is used instead of a
   * file. */
  std::string tokens_buf;
};
/** @brief Feature extraction settings shared by ASR and KWS wrappers. */
struct FeatureConfig {
  /** Input sample rate in Hz. */
  int32_t sample_rate = 16000;
  /** Number of features per frame. */
  int32_t feature_dim = 80;
};
/** @brief Decoder graph configuration for online CTC + FST decoding. */
struct OnlineCtcFstDecoderConfig {
  /** FST graph file. */
  std::string graph;
  /** Maximum number of active states during search. */
  int32_t max_active = 3000;
};
/** @brief Homophone replacement resources used by some Chinese ASR setups. */
struct HomophoneReplacerConfig {
  /** Reserved field. Currently unused by the wrapper. */
  std::string dict_dir;
  /** Lexicon file used by the replacer. */
  std::string lexicon;
  /** Rule FST file used for replacement. */
  std::string rule_fsts;
};
/**
 * @brief Configuration for streaming ASR.
 *
 * Example:
 *
 * @code
 * OnlineRecognizerConfig config;
 * config.model_config.transducer.encoder =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/"
 *     "encoder-epoch-99-avg-1.int8.onnx";
 * config.model_config.transducer.decoder =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/"
 *     "decoder-epoch-99-avg-1.onnx";
 * config.model_config.transducer.joiner =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/"
 *     "joiner-epoch-99-avg-1.int8.onnx";
 * config.model_config.tokens =
 *     "./sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20/tokens.txt";
 * config.model_config.num_threads = 1;
 * config.hr.lexicon = "./lexicon.txt";
 * config.hr.rule_fsts = "./replace.fst";
 * @endcode
 */
struct OnlineRecognizerConfig {
  /** Feature extraction configuration. */
  FeatureConfig feat_config;
  /** Acoustic model configuration. */
  OnlineModelConfig model_config;

  /** Decoding method such as `"greedy_search"` or `"modified_beam_search"`. */
  std::string decoding_method = "greedy_search";

  /** Maximum number of active paths for beam-search-style decoding. */
  int32_t max_active_paths = 4;

  /** Enable endpoint detection. */
  bool enable_endpoint = false;

  /** Endpointing rule 1 trailing silence threshold in seconds. */
  float rule1_min_trailing_silence = 2.4;

  /** Endpointing rule 2 trailing silence threshold in seconds. */
  float rule2_min_trailing_silence = 1.2;

  /** Endpointing rule 3 minimum utterance length in seconds. */
  float rule3_min_utterance_length = 20;

  /** Optional hotword file. */
  std::string hotwords_file;

  /** Hotword boost score. */
  float hotwords_score = 1.5;

  /** Optional CTC+FST decoder configuration. */
  OnlineCtcFstDecoderConfig ctc_fst_decoder_config;
  /** Optional ITN rule FST archive. */
  std::string rule_fsts;
  /** Optional ITN rule FAR archive. */
  std::string rule_fars;
  /** Optional blank penalty applied during decoding. */
  float blank_penalty = 0;

  /** Optional in-memory hotword definitions. */
  std::string hotwords_buf;
  /** Optional homophone replacement configuration. */
  HomophoneReplacerConfig hr;
};